--- a/note/1.md
+++ b/note/1.md
@@ -2476,6 +2476,341 @@ public class Demo38 {
 }
 ```
 
+### 可视化日历程序
+```java
+import java.text.DateFormat;
+import java.text.ParseException;
+import java.text.SimpleDateFormat;
+import java.util.Calendar;
+import java.util.Date;
+import java.util.GregorianCalendar;
+import java.util.Scanner;
+
+/**
+ * Created by Echo on 11/30/17.
+ * 可视化日历程序
+ */
+public class Demo39 {
+
+    public static void main(String[] args) {
+
+        System.out.println("请输入你想要查询的日期: 例如: 2018-08-08");
+        Scanner scanner = new Scanner(System.in);
+        String inputStr = scanner.nextLine();
+
+        DateFormat df = new SimpleDateFormat("yyyy-MM-dd");
+
+        Date date = null;
+        try {
+            // 时间对象
+            date = df.parse(inputStr);
+        } catch (ParseException e) {
+            e.printStackTrace();
+        }
+        // 日历对象
+        Calendar calendar = new GregorianCalendar();
+        calendar.setTime(date);
+
+        // 获得当前日期
+        int day = calendar.get(Calendar.DATE);
+
+        // 设置为当月的1号
+        calendar.set(Calendar.DATE, 1);
+
+        // 一号是周几?
+        // System.out.println(calendar.get(Calendar.DAY_OF_WEEK));
+        // 这个月共有多少天?
+        // System.out.println(calendar.getActualMaximum(Calendar.DATE));
+
+        int maxDate = calendar.getActualMaximum(Calendar.DATE);
+
+        System.out.println("日\t一\t二\t三\t四\t五\t六");
+
+        for (int i = 1; i < calendar.get(Calendar.DAY_OF_WEEK); i++) {
+            System.out.print('\t');
+        }
+
+        for (int i = 1; i <= maxDate; i++) {
+            if (i == day) {
+                System.out.print("*");
+            }
+            System.out.print(i + "\t");
+            int w = calendar.get(Calendar.DAY_OF_WEEK);
+            if (w == Calendar.SATURDAY) {
+                System.out.println();
+            }
+            // 加一天
+            calendar.add(Calendar.DATE, 1);
+        }
+
+    }
+}
+```
+
+### File类的使用
+```java
+import java.io.File;
+import java.io.IOException;
+
+/**
+ * File类的使用
+ */
+public class Demo40 {
+
+    public static void main(String[] args) {
+        // 文件
+        File f = new File("d:/src/TestFile/index.js");
+
+        // 目录
+        File f2 = new File("d:/src/TestFile/");
+
+        // 目录 + 文件名
+        File f3 = new File(f2, "index.js");
+
+        File f4 = new File(f2, "testFile.js");
+
+        File f5 = new File("d:/src/TestFile/aa/bb/cc");
+
+        // mkdir 创建单级目录
+        // f5.mkdir();
+
+        // mkdirs 创建多级目录
+        // f5.mkdirs();
+
+        try {
+            // createNewFile 创建一个testFile.js 文件
+            f4.createNewFile();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+        // delete
+        // f4.delete();
+
+        // isFile
+        if (f.isFile()) {
+            System.out.println("是一个文件");
+        }
+
+        // isDirectory
+        if (f2.isDirectory()) {
+            System.out.println("是一个目录");
+        }
+    }
+}
+```
+
+### File类打印目录树状结构（递归算法）
+```java
+/**
+ * File类打印目录树状结构（递归算法）
+ */
+public class Demo41 {
+
+    public static void main(String[] args) {
+
+        File f = new File("/Users/yuhuayang/Study/icoolxue/coreJava");
+        printFileOrDir(f, 0);
+    }
+
+    public static void printFileOrDir(File file, int level) {
+        for (int i = 0; i < level; i++) {
+            System.out.print("-");
+        }
+        System.out.println(file.getName());
+
+        if (file.isDirectory()) {
+            File[] files = file.listFiles();
+            for (File item : files) {
+                printFileOrDir(item, level + 1);
+            }
+        }
+    }
+
+}
+```
+
+### 异常机制（Exception和Throwable以及Error的概念）
+```java
+/**
+ * 一. 异常机制（Exception和Throwable以及Error的概念）
+ *   1. 抛出异常对象
+ *   2. 捕获异常对象
+ * Throwable
+ *  —— Exception (需要程序员处理)
+ *    —— checkedException (必须要捕获的异常, 否则编译期不通过)
+ *    —— unCheckedException
+ *  —— Error
+ *
+ *  二. 异常简单处理
+ */
+public class Demo42 {
+
+    public static void main(String[] args) {
+        // 1. uncheckedException
+        // int i = 1 / 0; // Exception in thread "main" java.lang.ArithmeticException: / by zero
+
+        try {
+            // 2. checkedException
+            Thread.sleep(300);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+        // NullPointerException
+        Computer c = null; // Exception in thread "main" java.lang.NullPointerException
+        // c.start(); // 对象是null, 调用了对象的属性或方法
+
+        String str = "1234abcd";
+        // NumberFormatException
+        Integer i = new Integer(str); // Exception in thread "main" java.lang.NumberFormatException: For input string: "1234abcd"
+    }
+}
+
+class Computer {
+    void start() {
+        System.out.println("计算机启动");
+    }
+}
+```
+
+### 异常机制（try catch finally return执行顺序）
+```java
+import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.IOException;
+
+/**
+ * 异常机制（try catch finally return执行顺序）
+ * 1. 先执行 try catch, 给返回值赋值
+ * 2. 再执行finally
+ * 3. 最后return
+ * 注意: finally中 不要return
+ */
+public class Demo43 {
+
+    public static void main(String[] args) {
+
+
+        readFile("/Users/yuhuayang/Study/icoolxue/coreJava/note/1.md");
+
+        try {
+            Thread.sleep(1000);
+        } catch (InterruptedException e) {
+            e.printStackTrace(); // 打印错误堆栈轨迹
+        } finally {
+            System.out.println("Thread.sleep(1000)");
+        }
+
+    }
+
+    public static void readFile(String fileName) {
+        FileReader reader = null;
+        try {
+            reader = new FileReader(fileName);
+            char c = (char) reader.read();
+        } catch (FileNotFoundException e) {
+            e.printStackTrace();
+        } catch (IOException e) {
+            e.printStackTrace();
+        } finally {
+            if (null != reader) {
+                try {
+                    reader.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+### 声明异常throw和手动抛出异常
+```java
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.FileReader;
+import java.io.IOException;
+
+/**
+ * 声明异常throw和手动抛出异常
+ * 1. 子类不能抛出比父类范围更广的异常
+ */
+public class Demo44 {
+
+    public static void main(String[] args) {
+
+        try {
+            openFile("d:/src/test.js"); // 谁调用谁处理异常
+        } catch (FileNotFoundException e) {
+            e.printStackTrace();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+
+        openFile2("d:/src/test2.js");
+    }
+
+    // throws 向外抛出异常
+    public static void openFile(String filePath) throws FileNotFoundException, IOException {
+        FileReader reader = new FileReader(filePath);
+        char c = (char) reader.read();
+    }
+
+    public static void openFile2(String filePath) {
+        File f = new File(filePath);
+        if (!f.exists()) {
+            try {
+                // 手动抛出异常
+                throw new FileNotFoundException("File can't be found!");
+            } catch (FileNotFoundException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+}
+```
+
+### 自定义异常
+```java
+/**
+ * 自定义异常
+ * 注意:
+ * 1. 避免使用异常处理代替错误处理, 这样会降低程序的清晰性, 并且效率低下
+ * 2. 处理异常不可以代替简单测试, 只在异常情况下使用异常机制
+ * 3. 避免小粒度的异常处理, 应该将整个代码块包装在一个Try语句块中
+ * 4. 异常往往在高层处理
+ */
+public class MyException extends Exception {
+
+    public MyException() {
+    }
+
+    public MyException(String message) {
+        super(message);
+    }
+}
+
+class TestMyExcepiton {
+
+    // 抛出自定义异常
+    void test() throws MyException {
+        // code...
+    }
+
+    public static void main(String[] args) {
+        try {
+            new TestMyExcepiton().test();
+        } catch (MyException e) {
+            e.printStackTrace();
+        }
+    }
+}
+```
+
 
 
 
