--- a/note/5.md
+++ b/note/5.md
@@ -1050,19 +1050,20 @@ public class Demo16 {
 1. 继承Thread
 2. 实现Runnable
 3. 实现Callable
-
 4. 线程的状态
-* 新生 -- start -- 就绪 -- 运行 -- 阻塞 -- 终止
-* 终止线程(重点)
-* 阻塞: join yield sleep(持有锁) wait(释放锁)
+    * 新生 -- start -- 就绪 -- 运行 -- 阻塞 -- 终止
+    * 终止线程(重点)
+    * 阻塞: join yield sleep(持有锁) wait(释放锁)
 5. 线程的信息
-* Thread.currentThread
-* 获取名称 设置名称 设置优先级 判断状态
+    * Thread.currentThread
+    * 获取名称 设置名称 设置优先级 判断状态
 6. 同步
-* 同步方法，同步代码块
-synchronized(引用类型|this|类.class) {
+    * 同步方法，同步代码块
+    ```java
+        synchronized(引用类型|this|类.class) {
 
-}
-* 过多的同步容易造成死锁
+    }
+    ```
+    * 过多的同步容易造成死锁
 7. 生产者与消费者
 8. 任务的调度
